--- a/muk_web_preview_image/static/description/index.html
+++ b/muk_web_preview_image/static/description/index.html
@@ -11,7 +11,7 @@
 </section>
 
 <section class="oe_container" style="padding-top: 25px;">
-	<div class="oe_row oe_spaced">
+	<div class="oe_row oe_spaced" style="height: 550px;">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">Extendes the Preview Dialog to support images.
