--- a/muk_web_preview_msoffice/static/description/index.html
+++ b/muk_web_preview_msoffice/static/description/index.html
@@ -1,7 +1,8 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<h2 class="oe_slogan">Preview Video</h2>
-		<h3 class="oe_slogan">Preview your videos directly in Odoo.</h3>
+		<h2 class="oe_slogan">Preview MS Office</h2>
+		<h3 class="oe_slogan">Preview your MS Office files directly in
+			Odoo.</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
 		<div class="oe_demo oe_picture oe_screenshot">
@@ -14,13 +15,12 @@
 	<div class="oe_row oe_spaced">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">Extendes the Preview Dialog to support videos.
-				Currently the following video extensions are supported:</p>
+			<p class="oe_mt32">Extendes the Preview Dialog to support MS
+				Office files. Currently the following file extensions are supported:</p>
 			<p>
-				<span style="color: green;"> &#9745; </span> WebM (*.webm,
-				video/webm) <br /> <span style="color: green;"> &#9745; </span> Ogg
-				Theora Vorbis (*.ogg, video/ogg) <br /> <span style="color: green;">
-					&#9745; </span> MP4 (*.mp4, video/mp4) <br />
+				<span style="color: green;"> &#9745; </span> Word (*.doc | *.docx, application/msword)  <br />
+				<span style="color: green;"> &#9745; </span> Excel (*.xls | *.xlsx, application/msexcel) <br />
+				<span style="color: green;"> &#9745; </span> PowerPoint (*.ppt | *.pptx, application/mspowerpoint)
 			</p>
 		</div>
 	</div>
