--- a/muk_web_preview_attachment/static/description/index.html
+++ b/muk_web_preview_attachment/static/description/index.html
@@ -14,10 +14,10 @@
 	<div class="oe_row oe_spaced">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">
-			Adds a button to the Attachment Sidebar to
-        	preview the content directly in the browser.
-			</p>
+			<p class="oe_mt32">Adds a button to the Attachment Sidebar to
+				preview the content directly in the browser. Note that the
+				dependencies are only included for convenience. The only one which
+				is really needed is muk_web_preview.</p>
 		</div>
 	</div>
 </section>
@@ -26,10 +26,10 @@
 	<h3 class="oe_slogan">Help and Support</h3>
 	<div class="oe_slogan">
 		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
-			<i class="fa fa-envelope"></i> Email 
-		</a> 
-		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at/page/contactus">
-			<i class="fa fa-phone"></i> Contact 
+			<i class="fa fa-envelope"></i> Email
+		</a> <a class="btn btn-primary btn-lg mt8"
+			href="https://mukit.at/page/contactus"> <i class="fa fa-phone"></i>
+			Contact
 		</a>
 	</div>
 	<img src="logo.png" style="width: 200px; margin-bottom: 20px;"
