--- a/muk_web_client_refresh/static/description/index.html
+++ b/muk_web_client_refresh/static/description/index.html
@@ -1,9 +1,12 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<h2 class="oe_slogan">Web Refresh</h2>
-		<h3 class="oe_slogan">Web Client Refresh Channel</h3>
+		<h2 class="oe_slogan">Preview Video</h2>
+		<h3 class="oe_slogan">Preview your videos directly in Odoo.</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
+		<div class="oe_demo oe_picture oe_screenshot">
+			<img src="screenshot.png">
+		</div>
 	</div>
 </section>
 
@@ -11,9 +14,8 @@
 	<div class="oe_row oe_spaced">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">Adds a refresh channel to the web client. By
-				sending a message to this channel, the corresponding view is
-				reloaded.</p>
+			<p class="oe_mt32">Allows the creation of rules to trigger a view
+				refresh automatically.</p>
 		</div>
 	</div>
 </section>
