--- a/muk_web_client/static/description/index.html
+++ b/muk_web_client/static/description/index.html
@@ -7,7 +7,7 @@
 	</div>
 </section>
 
-<section class="oe_container" style="padding-top: 25px;">
+<section class="oe_container" style="padding-bottom: 70px;">
 	<div class="oe_row oe_spaced">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
