--- a/muk_web_preview_attachment/static/description/index.html
+++ b/muk_web_preview_attachment/static/description/index.html
@@ -22,6 +22,35 @@
 </section>
 
 <section class="oe_container oe_dark">
+	<div class="oe_row oe_spaced">
+		<h3 class="oe_slogan">Sidebar Preview</h3>
+		<div class="oe_span6">
+			<p class="oe_mt32 text-justify">
+				The extra button in the sidebar triggers the preview dialog. 
+			</p>
+		</div>
+		<div class="oe_span6">
+			<img class="oe_picture oe_screenshot" src="screenshot_sidebar.png">
+		</div>
+	</div>
+</section>
+
+<section class="oe_container">
+	<div class="oe_row oe_spaced">
+		<h3 class="oe_slogan">Chatter Preview</h3>
+		<div class="oe_span6">
+			<img class="oe_picture oe_screenshot" src="screenshot_chatter.png">
+		</div>
+		<div class="oe_span6">
+			<p class="oe_mt32 text-justify">
+				All Chatter Widgets support the preview dialog.
+			</p>
+		</div>
+	</div>
+</section>
+
+
+<section class="oe_container oe_dark">
 	<h3 class="oe_slogan">Help and Support</h3>
 	<div class="oe_slogan">
 		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
