--- a/muk_web_utils/static/description/index.html
+++ b/muk_web_utils/static/description/index.html
@@ -7,6 +7,16 @@
 	</div>
 </section>
 
+<section class="oe_container">
+	<div class="oe_row oe_spaced">
+		<div class="oe_picture">
+			<h3 class="oe_slogan">Overview</h3>
+			<p class="oe_mt32">Technical module to provide some utility features.
+			</p>
+		</div>
+	</div>
+</section>
+
 <section class="oe_container oe_dark">
 	<h3 class="oe_slogan">Help and Support</h3>
 	<div class="oe_slogan">
