--- a/muk_web_utils/static/description/index.html
+++ b/muk_web_utils/static/description/index.html
@@ -11,8 +11,9 @@
 	<div class="oe_row oe_spaced">
 		<div class="oe_picture">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">Technical module to provide some utility features.
-			</p>
+			<p class="oe_mt32">Technical module to provide some utility
+				features. The module is mainly used as a dependency by other
+				modules and to provide a collection of common libraries.</p>
 		</div>
 	</div>
 </section>
