--- a/muk_web_preview_msoffice/static/description/index.html
+++ b/muk_web_preview_msoffice/static/description/index.html
@@ -5,7 +5,7 @@
 			Odoo.</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
-		<div class="oe_demo oe_picture oe_screenshot">
+		<div class="oe_demo oe_screenshot">
 			<img src="screenshot.png">
 		</div>
 	</div>
