--- a/muk_web_fields_lobject/static/description/index.html
+++ b/muk_web_fields_lobject/static/description/index.html
@@ -36,7 +36,7 @@ fields to display in XML views.</p>
 	</div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container oe_dark" style="margin-top: 150px;">
 	<h3 class="oe_slogan">Help and Support</h3>
 	<div class="oe_slogan">
 		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
