--- a/muk_web_fields_lobject/static/description/index.html
+++ b/muk_web_fields_lobject/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<h2 class="oe_slogan">MuK PGSQL Large Objects</h2>
-		<h3 class="oe_slogan">PGSQL Large Objects Support</h3>
+		<h2 class="oe_slogan">MuK Large Objects Field Widget</h2>
+		<h3 class="oe_slogan">PGSQL Large Objects Field Widget</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
 	</div>
