--- a/muk_web_preview_lobject/static/description/index.html
+++ b/muk_web_preview_lobject/static/description/index.html
@@ -23,7 +23,7 @@
 	</div>
 </section>
 
-<section class="oe_container oe_dark" style="margin-top: 450px;">
+<section class="oe_container oe_dark">
 	<h3 class="oe_slogan">Help and Support</h3>
 	<div class="oe_slogan">
 		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
