--- a/muk_web_preview/static/description/index.html
+++ b/muk_web_preview/static/description/index.html
@@ -10,7 +10,7 @@
 	</div>
 </section>
 
-<section class="oe_container" style="padding-top: 25px;">
+<section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
@@ -22,11 +22,9 @@
 	</div>
 </section>
 
-
-
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
-		<h3 class="oe_slogan">PDF & Open Document Preview</h3>
+		<h3 class="oe_slogan">PDF &amp; Open Document Preview</h3>
 		<div class="oe_span6">
 			<p class="oe_mt32 text-justify">A preview for Open Documents and
 				PDFs is already included in the MuK Preview module. The following
