--- a/muk_web_security/static/description/index.html
+++ b/muk_web_security/static/description/index.html
@@ -11,10 +11,9 @@
 	<div class="oe_row oe_spaced">
 		<div style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">Technical module to provide some utility
-				features. The module is mainly used as a dependency by other modules
-				and to provide a collection of common libraries. It has no direct
-				visible effect on the system.</p>
+			<p class="oe_mt32">Technical module to extend the security
+				module. The module is mainly used as a dependency by other modules
+				and has no direct visible effect on the system.</p>
 		</div>
 	</div>
 </section>
