publish muk_web_utils - 12.0

--- a/muk_web_utils/static/description/index.html
+++ b/muk_web_utils/static/description/index.html
@@ -51,15 +51,18 @@
 		contact us, if you need any help with your Odoo integration or
 		addiontal features.</h5>
 	<div class="oe_slogan">
-		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
-			<i class="fa fa-envelope"></i> Email
+		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at">
+			<i class="fa fa-globe"></i> Website
 		</a> 
 		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at/page/contactus"> 
 			<i class="fa fa-phone"></i> Contact
 		</a> 
-		<a class="btn btn-primary btn-lg mt8" href="mailto:support@mukit.at">
-			<i class="fa fa-life-ring"></i> Support
+		<a class="btn btn-primary btn-lg mt8" href="https://github.com/muk-it">
+			<i class="fa fa-github"></i> Issues
 		</a>
+		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
+			<i class="fa fa-envelope"></i> Request a Feature
+		</a> 
 	</div>
 	<img src="logo.png" style="width: 200px; margin-bottom: 20px; display: block;" class="mx-auto center-block">
 </section>
