publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -44,7 +44,7 @@
 	</div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Mobile Interface</h3>
