--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -74,29 +74,86 @@
 	</div>
 </section>
 
-<section class="oe_container oe_dark"
-	style="margin-bottom: 20px; border-top: 5px solid #797979; border-bottom: 5px solid #797979;">
-	<h3 class="oe_slogan" style="margin-bottom: 10px;">Demo</h3>
-	<div class="row" style="margin: auto; max-width: 250px;">
-		<div class="col-6 col-xs-6">
-			<h5 class="oe_slogan" style="font-size: 20px; margin: 2px;">User:</h5>
-		</div>
-		<div class="col-6 col-xs-6">
-			<h5 class="oe_slogan" style="font-size: 20px; margin: 2px;">apps</h5>
-		</div>
-		<div class="col-6 col-xs-6">
-			<h5 class="oe_slogan" style="font-size: 20px; margin: 2px;">Password:</h5>
-		</div>
-		<div class="col-6 col-xs-6">
-			<h5 class="oe_slogan" style="font-size: 20px; margin: 2px;">demo</h5>
+<section class="oe_container oe_dark">
+	<div class="oe_row oe_spaced">
+		<h3 class="oe_slogan">Our Services</h3>
+		<div
+			style="display: flex; padding-top: 20px; justify-content: space-between;">
+			<div style="flex-basis: 18%;">
+				<a href="https://mukit.at/r/MQ5" target="_blank">
+					<div
+						style="width: 75px; height: 75px; border-radius: 100%; margin: auto;">
+						<img src="service_implementation.png"
+							style="width: 100%; border-radius: 100%;">
+					</div>
+					<h3 class="oe_slogan"
+						style="text-align: center; font-size: 14px; width: 100%; margin: 0; margin-top: 14px; color: #000 !important; margin-top: 5px; opacity: 1 !important; line-height: 17px;">
+						Odoo <br>Implementation
+					</h3>
+				</a>
+			</div>
+			<div style="flex-basis: 18%;">
+				<a href="https://mukit.at/r/u7c" target="_blank">
+					<div
+						style="width: 75px; height: 75px; border-radius: 100%; margin: auto;">
+						<img src="service_integration.png"
+							style="width: 100%; border-radius: 100%;">
+					</div>
+					<h3 class="oe_slogan"
+						style="text-align: center; font-size: 14px; width: 100%; margin: 0; margin-top: 14px; color: #000 !important; margin-top: 5px; opacity: 1 !important; line-height: 17px;">
+						Odoo <br>Integration
+					</h3>
+				</a>
+			</div>
+			<div style="flex-basis: 18%;">
+				<a href="https://mukit.at/r/xDJ" target="_blank">
+					<div
+						style="width: 75px; height: 75px; border-radius: 100%; margin: auto;">
+						<img src="service_customization.png"
+							style="width: 100%; border-radius: 100%;">
+					</div>
+					<h3 class="oe_slogan"
+						style="text-align: center; font-size: 14px; width: 100%; margin: 0; margin-top: 14px; color: #000 !important; margin-top: 5px; opacity: 1 !important; line-height: 17px;">
+						Odoo <br>Customization
+					</h3>
+				</a>
+			</div>
+			<div style="flex-basis: 18%;">
+				<a href="	https://mukit.at/r/J3A" target="_blank">
+					<div
+						style="width: 75px; height: 75px; border-radius: 100%; margin: auto;">
+						<img src="service_development.png"
+							style="width: 100%; border-radius: 100%;">
+					</div>
+					<h3 class="oe_slogan"
+						style="text-align: center; font-size: 14px; width: 100%; margin: 0; margin-top: 14px; color: #000 !important; margin-top: 5px; opacity: 1 !important; line-height: 17px;">
+						Odoo <br>Development
+					</h3>
+				</a>
+			</div>
+			<div style="flex-basis: 18%;">
+				<a href="	https://mukit.at/r/R1v" target="_blank">
+					<div
+						style="width: 75px; height: 75px; border-radius: 100%; margin: auto;">
+						<img src="service_support.png"
+							style="width: 100%; border-radius: 100%;">
+					</div>
+					<h3 class="oe_slogan"
+						style="text-align: center; font-size: 14px; width: 100%; margin: 0; margin-top: 14px; color: #000 !important; margin-top: 5px; opacity: 1 !important; line-height: 17px;">
+						Odoo <br>Support
+					</h3>
+				</a>
+			</div>
 		</div>
 	</div>
-	<div class="oe_slogan" style="margin-top: 5px;">
-		<a class="btn btn-primary btn-lg mt8"
-			href="https://demo.mukit.at/web/login"
-			style="position: relative; overflow: hidden;"> <i
-			class="fa fa-video-camera"></i> Live Preview
-		</a>
+</section>
+
+<section class="oe_container" style="padding: 32px 0;">
+	<div class="oe_row oe_spaced" style="margin: auto;">
+		<div class="oe_demo oe_picture oe_screenshot">
+			<a href="https://mukit.at/r/SgN" target="_blank"> <img src="preview.png">
+			</a>
+		</div>
 	</div>
 </section>
 
@@ -105,17 +162,17 @@
 	<h5 class="oe_slogan" style="font-size: 20px;">Feel free to
 		contact us, if you need any help with your Odoo integration or
 		addiontal features.</h5>
+	<h5 class="oe_slogan" style="font-size: 20px;">You will get 30
+		Days free support incase of any bugs or issues (Except data recovery
+		or migration).</h5>
 	<div class="oe_slogan">
-		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at"> <i
+		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at" target="_blank"> <i
 			class="fa fa-globe"></i> Website
-		</a> <a class="btn btn-primary btn-lg mt8"
-			href="https://mukit.at/page/contactus"> <i class="fa fa-phone"></i>
-			Contact
-		</a> <a class="btn btn-primary btn-lg mt8"
-			href="https://github.com/muk-it"> <i class="fa fa-github"></i>
-			Issues
 		</a> <a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
-			<i class="fa fa-envelope"></i> Request a Feature
+			<i class="fa fa-envelope"></i> Contact Us
+		<a class="btn btn-primary btn-lg mt8"
+			href="https://github.com/muk-it" target="_blank"> <i class="fa fa-github"></i>
+			Issues
 		</a>
 	</div>
 	<img src="logo.png"
