--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -163,13 +163,14 @@
 		contact us, if you need any help with your Odoo integration or
 		addiontal features.</h5>
 	<div class="oe_slogan">
-		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at" target="_blank"> <i
-			class="fa fa-globe"></i> Website
-		</a> <a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
+		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at" target="_blank"> 
+			<i class="fa fa-globe"></i> Website
+		</a> 
+		<a class="btn btn-primary btn-lg mt8" href="https://github.com/muk-it" target="_blank">
+			<i class="fa fa-github"></i> Issues
+		</a>
+		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
 			<i class="fa fa-envelope"></i> Contact Us
-		<a class="btn btn-primary btn-lg mt8"
-			href="https://github.com/muk-it" target="_blank"> <i class="fa fa-github"></i>
-			Issues
 		</a>
 	</div>
 	<img src="logo.png"
