--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<h2 class="oe_slogan">MuK Backend Theme</h2>
-		<h3 class="oe_slogan">Odoo 12.0 community backend theme</h3>
+		<h3 class="oe_slogan">Odoo Community Backend Theme</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
 		<div class="oe_demo oe_screenshot"
