--- a/muk_web_client/static/description/index.html
+++ b/muk_web_client/static/description/index.html
@@ -9,7 +9,7 @@
 
 <section class="oe_container" style="padding-bottom: 50px;">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32" style="padding-bottom: 10px; text-align: justify;">
 				Extends the Odoo web client to include bus channels. Channels can be
