--- a/muk_web_branding/static/description/index.html
+++ b/muk_web_branding/static/description/index.html
@@ -13,7 +13,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">
 				This module complements the Branding Module. It serves to adapt the
