--- a/muk_web_utils/static/description/index.html
+++ b/muk_web_utils/static/description/index.html
@@ -9,7 +9,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">Technical module to provide some utility
 				features. The module is mainly used as a dependency by other modules
