publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -13,7 +13,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">This module offers a mobile compatible design
 				for Odoo Community. Furthermore it allows the user to define some
@@ -26,7 +26,7 @@
 
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Desktop Interface</h3>
 			<div class="row">
 				<div class="mb16 col-lg-6">
@@ -46,7 +46,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Mobile Interface</h3>
 			<div class="row">
 				<div class="mb16 col-md-4 col-lg-3">
