publish muk_web_client_notification - 12.0

--- a/muk_web_client_notification/static/description/index.html
+++ b/muk_web_client_notification/static/description/index.html
@@ -13,7 +13,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">Adds a notification channel to the web client.
 				By sending a message to this channel, a notification is send to the
@@ -26,7 +26,7 @@
 
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Customize Process</h3>
 			<div class="row">
 				<div class="mb16 col-lg-6">
@@ -46,7 +46,7 @@
 
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<div style="max-width: 84%; margin: 16px 8%;">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Customize Process</h3>
 			<div class="row">
 				<div class="mb16 col-lg-6">
