publish muk_web_preview_opendocument - 12.0

--- a/muk_web_preview_opendocument/static/description/index.html
+++ b/muk_web_preview_opendocument/static/description/index.html
@@ -21,12 +21,12 @@
 			<p>
 				<span style="color: green;"> &#9745; </span> Open Text Document
 				(*.odt, application/vnd.oasis.opendocument.text) <br/><span
-					style="color: green;"> &#9745; </span> Open Text Document (*.odp,
+					style="color: green;"> &#9745; </span> Open Presentation Document (*.odp,
 				application/vnd.oasis.opendocument.presentation) <br/><span
-					style="color: green;"> &#9745; </span> Open Text Document (*.ods,
+					style="color: green;"> &#9745; </span> Open Spreadsheet Document (*.ods,
 				application/vnd.oasis.opendocument.spreadsheet)
 			</p>
-		</div>
+		</div> 
 	</div>
 </section>
 
