--- a/muk_web_preview_rst/static/description/index.html
+++ b/muk_web_preview_rst/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<h2 class="oe_slogan">Preview Markdown</h2>
-		<h3 class="oe_slogan">Preview your Markdown files directly in Odoo.</h3>
+		<h2 class="oe_slogan">Preview ReStructuredText</h2>
+		<h3 class="oe_slogan">Preview your ReStructuredText files directly in Odoo.</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
 		<div class="oe_demo oe_screenshot"
@@ -16,11 +16,11 @@
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">Extendes the Preview Dialog to support
-				Markdown files. Currently the following Markdown file extensions are
+				ReStructuredText files. Currently the following ReStructuredText file extensions are
 				supported:</p>
 			<p>
-				<span style="color: green;"> &#9745; </span> Markdown (*.md,
-				text/markdown)
+				<span style="color: green;"> &#9745; </span> ReStructuredText (*.rst,
+				text/x-rst)
 			</p>
 		</div>
 	</div>
