--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -76,6 +76,26 @@
 
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
+			<h3 class="oe_slogan">Customize</h3>
+			<div class="row">
+				<div class="mb16 col-lg-6">
+					<div class="oe_demo oe_screenshot">
+						<img src="screenshot_customize.png">
+					</div>
+				</div>
+				<div class="mb16 col-lg-6">
+					<div class="oe_demo oe_screenshot">
+						<img src="screenshot_settings.png">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section class="oe_container oe_dark">
+	<div class="oe_row oe_spaced">
 		<h3 class="oe_slogan">Our Services</h3>
 		<div
 			style="display: flex; padding-top: 20px; justify-content: space-between;">
