--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -77,7 +77,7 @@
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
-			<h3 class="oe_slogan">Customize</h3>
+			<h3 class="oe_slogan">Fully Customizable</h3>
 			<div class="row">
 				<div class="mb16 col-lg-6">
 					<div class="oe_demo oe_screenshot">
