publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -94,6 +94,26 @@
 	</div>
 </section>
 
+<section class="oe_container">
+	<div class="oe_row oe_spaced">
+		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
+			<h3 class="oe_slogan">Menu Search &amp; More</h3>
+			<div class="row">
+				<div class="mb16 col-lg-6">
+					<div class="oe_demo oe_screenshot">
+						<img src="screenshot_search.png">
+					</div>
+				</div>
+				<div class="mb16 col-lg-6">
+					<div class="oe_demo oe_screenshot">
+						<img src="screenshot_more.png">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 <section class="oe_container oe_dark">
 	<div class="oe_row oe_spaced">
 		<h3 class="oe_slogan">Our Services</h3>
