publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -97,19 +97,87 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
-			<h3 class="oe_slogan">Menu Search &amp; More</h3>
-			<div class="row">
-				<div class="mb16 col-lg-6">
-					<div class="oe_demo oe_screenshot">
-						<img src="screenshot_search.png">
+			<h3 class="oe_slogan">Theme Extensions</h3>
+			<div id="apps" class="row carousel slide mb16" data-ride="carousel">
+				<div class="carousel-inner">
+					<div class="carousel-item active" style="min-height: 0px;">
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_mail/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="theme_mail_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Mail Extension
+								</h4>
+							</a>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_branding/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="theme_branding_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Branding Extension
+								</h4>
+							</a>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_website/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="theme_website_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Website Extension
+								</h4>
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="mb16 col-lg-6">
-					<div class="oe_demo oe_screenshot">
-						<img src="screenshot_more.png">
+					<div class="carousel-item" style="min-height: 0px;">
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_mail_branding/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="branding_mail_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Mail Branding
+								</h4>
+							</a>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_website_branding/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="branding_website_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Website Branding
+								</h4>
+							</a>
+						</div>
+						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
+							<a href="https://apps.odoo.com/apps/modules/12.0/muk_saas_branding/" target="_blank">
+								<div class="oe_screenshot">
+									<img class="img img-fluid img-responsive center-block"
+										src="branding_saas_banner.png">
+								</div>
+								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									SaaS Branding
+								</h4>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
+			<a class="carousel-control-prev" href="#apps" data-slide="prev" style="margin: 30px 0 0 40px; color: #000;"> 
+				<span class="carousel-control-prev-icon"><i class="fa fa-chevron-left" style="font-size: 24px"></i></span>
+			</a> 
+			<a class="carousel-control-next" href="#apps" data-slide="next" style="margin: 30px 40px 0 0; color: #000;"> 
+				<span class="carousel-control-next-icon"><i class="fa fa-chevron-right" style="font-size: 24px"></i></span>
+			</a>
 		</div>
 	</div>
 </section>
