publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -172,10 +172,10 @@
 					</div>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#apps" data-slide="prev" style="margin: 30px 0 0 40px; color: #000;"> 
+			<a class="carousel-control-prev" href="#apps" data-slide="prev" style="margin-left: 40px; color: #000;"> 
 				<span class="carousel-control-prev-icon"><i class="fa fa-chevron-left" style="font-size: 24px"></i></span>
 			</a> 
-			<a class="carousel-control-next" href="#apps" data-slide="next" style="margin: 30px 40px 0 0; color: #000;"> 
+			<a class="carousel-control-next" href="#apps" data-slide="next" style="margin-right: 40px; color: #000;"> 
 				<span class="carousel-control-next-icon"><i class="fa fa-chevron-right" style="font-size: 24px"></i></span>
 			</a>
 		</div>
