publish muk_web_theme_mail - 12.0

--- a/muk_web_theme_mail/static/description/index.html
+++ b/muk_web_theme_mail/static/description/index.html
@@ -15,10 +15,13 @@
 	<div class="oe_row oe_spaced">
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
-			<p class="oe_mt32">This module complements the <a
+			<p class="oe_mt32">
+				This module complements the <a
 					href="https://www.odoo.com/apps/themes/12.0/muk_web_theme/"
-					target="_blank">Backend Theme</a> module by
-				customizing the chatter to better integrate with the theme.</p>
+					target="_blank">Backend Theme</a> module by customizing the chatter
+				to better integrate with the theme. In addition, this module offers
+				a better user experience for the chatter on mobile devices.
+			</p>
 		</div>
 	</div>
 </section>
