publish muk_web_report_page - 12.0

--- a/muk_web_report_page/static/description/index.html
+++ b/muk_web_report_page/static/description/index.html
@@ -1,7 +1,7 @@
 <section class="oe_container">
 	<div class="oe_row oe_spaced">
-		<h2 class="oe_slogan">MuK Auto Vacuum</h2>
-		<h3 class="oe_slogan">Configure automatic garbage collection</h3>
+		<h2 class="oe_slogan">MuK Report Page</h2>
+		<h3 class="oe_slogan">Single Page Reports</h3>
 		<h4 class="oe_slogan" style="font-size: 23px;">MuK IT GmbH -
 			www.mukit.at</h4>
 	</div>
