publish muk_web_theme - 12.0

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -16,10 +16,10 @@
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Overview</h3>
 			<p class="oe_mt32">This module offers a mobile compatible design
-				for Odoo Community. Furthermore it allows the user to define some
-				design preferences. So he can choose the size of the sidebar and the
-				position of the chatter. In addition, the background image of the app
-				menu can be set for each company.</p>
+				for Odoo Community. Furthermore it allows the
+				user to define some design preferences. So he can choose the size of
+				the sidebar and the position of the chatter. In addition, the
+				background image of the app menu can be set for each company.</p>
 		</div>
 	</div>
 </section>
@@ -102,81 +102,96 @@
 				<div class="carousel-inner">
 					<div class="carousel-item active" style="min-height: 0px;">
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_mail/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_mail/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="theme_mail_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									Mail Extension
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Mail Extension</h4>
 							</a>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_branding/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_branding/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="theme_branding_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									Branding Extension
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Branding Extension</h4>
 							</a>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_website/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_web_theme_website/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="theme_website_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									Website Extension
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Website Extension</h4>
 							</a>
 						</div>
 					</div>
 					<div class="carousel-item" style="min-height: 0px;">
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_mail_branding/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_mail_branding/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="branding_mail_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									Mail Branding
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Mail Branding</h4>
 							</a>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_website_branding/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_website_branding/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="branding_website_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									Website Branding
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									Website Branding</h4>
 							</a>
 						</div>
 						<div class="col-xs-12 col-sm-4 col-md-4" style="float: left;">
-							<a href="https://apps.odoo.com/apps/modules/12.0/muk_saas_branding/" target="_blank">
+							<a
+								href="https://apps.odoo.com/apps/modules/12.0/muk_saas_branding/"
+								target="_blank">
 								<div class="oe_screenshot">
 									<img class="img img-fluid img-responsive center-block"
 										src="branding_saas_banner.png">
 								</div>
-								<h4 style=" padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
-									SaaS Branding
-								</h4>
+								<h4
+									style="padding: 6% 4%; text-align: center; white-space: nowrap; width: 100%; overflow: hidden; text-overflow: ellipsis;">
+									SaaS Branding</h4>
 							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<a class="carousel-control-prev" href="#apps" data-slide="prev" style="margin-left: 40px; color: #000;"> 
-				<span class="carousel-control-prev-icon"><i class="fa fa-chevron-left" style="font-size: 24px"></i></span>
-			</a> 
-			<a class="carousel-control-next" href="#apps" data-slide="next" style="margin-right: 40px; color: #000;"> 
-				<span class="carousel-control-next-icon"><i class="fa fa-chevron-right" style="font-size: 24px"></i></span>
+			<a class="carousel-control-prev" href="#apps" data-slide="prev"
+				style="margin-left: 40px; color: #000;"> <span
+				class="carousel-control-prev-icon"><i
+					class="fa fa-chevron-left" style="font-size: 24px"></i></span>
+			</a> <a class="carousel-control-next" href="#apps" data-slide="next"
+				style="margin-right: 40px; color: #000;"> <span
+				class="carousel-control-next-icon"><i
+					class="fa fa-chevron-right" style="font-size: 24px"></i></span>
 			</a>
 		</div>
 	</div>
@@ -259,7 +274,8 @@
 <section class="oe_container" style="padding: 32px 0;">
 	<div class="oe_row oe_spaced" style="margin: auto;">
 		<div class="oe_demo oe_picture oe_screenshot">
-			<a href="https://mukit.at/r/SgN" target="_blank"> <img src="preview.png">
+			<a href="https://mukit.at/r/SgN" target="_blank"> <img
+				src="preview.png">
 			</a>
 		</div>
 	</div>
@@ -271,14 +287,13 @@
 		contact us, if you need any help with your Odoo integration or
 		addiontal features.</h5>
 	<div class="oe_slogan">
-		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at" target="_blank"> 
-			<i class="fa fa-globe"></i> Website
-		</a> 
-		<a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
+		<a class="btn btn-primary btn-lg mt8" href="https://mukit.at"
+			target="_blank"> <i class="fa fa-globe"></i> Website
+		</a> <a class="btn btn-primary btn-lg mt8" href="mailto:sale@mukit.at">
 			<i class="fa fa-envelope"></i> Contact Us
-		</a>
-		<a class="btn btn-primary btn-lg mt8" href="https://github.com/muk-it" target="_blank">
-			<i class="fa fa-github"></i> Issues
+		</a> <a class="btn btn-primary btn-lg mt8"
+			href="https://github.com/muk-it" target="_blank"> <i
+			class="fa fa-github"></i> Issues
 		</a>
 	</div>
 	<img src="logo.png"
