Update Shop Page

--- a/muk_web_theme/static/description/index.html
+++ b/muk_web_theme/static/description/index.html
@@ -24,7 +24,7 @@
 	</div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Desktop Interface</h3>
@@ -74,7 +74,7 @@
 	</div>
 </section>
 
-<section class="oe_container oe_dark">
+<section class="oe_container">
 	<div class="oe_row oe_spaced">
 		<div class="text-justify" style="max-width: 84%; margin: 16px 8%;">
 			<h3 class="oe_slogan">Fully Customizable</h3>
